--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[YOUR NAME]</title>
+    <meta
+      name="description"
+      content=" web page about ama akarregi and favorites"
+    />
+
+    <title>Ama Akarregi</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -63,6 +68,7 @@
           <img
             src="images/yoga.png"
             class="img-fluid rounded d-none d-md-block"
+            title="yoga"
           />
         </div>
         <div class="col-6">
@@ -88,13 +94,14 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link">Launch Weather App </a>
           </div>
         </div>
         <div class="col-6 yoga">
           <img
             src="images/weather.png"
             class="img-fluid rounded d-none d-md-block"
+            title="weather "
           />
         </div>
       </div>
@@ -103,6 +110,7 @@
           <img
             src="images/yogurt.png"
             class="img-fluid rounded d-none d-md-block"
+            title="yogurt"
           />
         </div>
         <div class="col-6">
