--- a/about.html
+++ b/about.html
@@ -39,10 +39,20 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a
+                class="nav-link active"
+                href="about.html"
+                title="about ama akarregi"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="contact  ama akarregi"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -77,7 +87,9 @@
       </div>
       <div id="contact" class="mt-5">
         <h2 class="text-center">📮 Contact me</h2>
-        <a href="mailto:[YOUR EMAIL]" class="email-link"> [YOUR EMAIL] </a>
+        <a href="mailto: amagoiaa@mac.com" class="email-link">
+          amagoiaa@mac.com
+        </a>
       </div>
     </div>
   </body>
