--- a/index.html
+++ b/index.html
@@ -41,15 +41,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title=" page of ama akarregi"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="about ama akarregi"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="contact ama akarregi"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -59,19 +70,23 @@
     <h1 class="text-center">Ama Akarregi</h1>
     <h3 class="text-center">Front-end developer, based in Bilbao</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="/index.html" class="primary-link" title="contact ama akarregi"
+        >Contact me</a
+      >
+      <a href="/about.html" class="secondary-link" title="aobut ama akarregi">
+        About me</a
+      >
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-6 yoga">
+        <div class="col-sm-6 yoga">
           <img
             src="images/yoga.png"
-            class="img-fluid rounded d-none d-md-block"
-            title="yoga"
+            class="img-fluid rounded d-none d-sm-block"
+            alt="yoga project"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -80,12 +95,14 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link button" title="yoga project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -94,26 +111,28 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App </a>
+            <a href="#" class="primary-link button" title="weather project"
+              >Launch Weather App
+            </a>
           </div>
         </div>
-        <div class="col-6 yoga">
+        <div class="col-sm-6 yoga">
           <img
             src="images/weather.png"
-            class="img-fluid rounded d-none d-md-block"
-            title="weather "
+            class="img-fluid rounded d-none d-sm-block"
+            alt="weather  project"
           />
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-6 yoga">
+      <div class="mt-5">
+        <div class="col-sm-6 yoga">
           <img
             src="images/yogurt.png"
-            class="img-fluid rounded d-none d-md-block"
-            title="yogurt"
+            class="img-fluid rounded d-none d-sm-block"
+            alt="yogurt project"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -122,7 +141,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link button" title="yogurt project"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
